<resources>
    <string name="app_name">calkulator</string>
    <string name="Ac">AC</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="EditText1">Policy</string>
    <string name="EditText2">Product Category</string>
    <string name="EditText3">Origin Country</string>
    <string name="EditText4">Brend</string>
    <string name="TextView1">Policies</string>
    <string name="Button">Export as CSV</string>
</resources>